--- a/src/Calculator.module.css
+++ b/src/Calculator.module.css
@@ -1,12 +1,11 @@
 .Calculator {
-    width: 300px;
-    height: 250px;
+    width: 320px;
+    font-family: Roboto, sans-serif;
     background: #a0220f;
-    margin: 10px auto 0;
     display:flex;
-    border-radius: 4px;
+    border-radius: 15px;
     box-shadow: 8px 8px 24px rgba(0,0,0,0.4);
     flex-direction: column;
-    align-items: space-around;
+    align-items: center;;
     justify-content: center;
 }
