--- a/src/Components/ButtonRow/ButtonRow.module.css
+++ b/src/Components/ButtonRow/ButtonRow.module.css
@@ -1,25 +1,27 @@
 .ButtonRow {
-    width: 90%;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 5px auto;
+    width: 100%;
 }
 
 .ButtonRow input {
-    width: 35px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
     font-family: 'Courier New', Courier, monospace;
-    border-radius: 4px;
     cursor:pointer;
-    box-shadow: 2px 2px 10px rgba(0,0,0,1);
+    font-size: 2em;
+    background: #ddd;
+    font-family: Roboto, sans-serif;
 }
 
 .ButtonRow input:focus {
     outline:none;
 }
 
+.ButtonRow input:nth-last-of-type(1) {
+    background: orange;
+    color:white;
+}
+
 .ButtonRow .SpecialButton {
-   width: 78px;
-   height: 40px;
+    width: 50%;
+    height: 80px;
 }
