--- a/src/Components/CalculatorDisplay/CalculatorDisplay.module.css
+++ b/src/Components/CalculatorDisplay/CalculatorDisplay.module.css
@@ -1,17 +1,20 @@
 .CalculatorDisplay {
-    width: 85%;
-    margin: 10px auto;
-    padding-top:10px;
-
+    width: 100%;
 }
 
 .DisplayRow {
     width: 100%;
     margin:0;
-    padding:0;
     outline:none;
     border:0;
-    height: 2em;
-    background: #eee;
+    background: #000;
+    color: white;
     text-align: right;
+    font-size: 2em;
+    padding-top: 10px;
+}
+
+.DisplayRow:nth-of-type(1) {
+    border-radius: 15px 15px 0 0;
+    font-size:1.3em;
 }
